Fixed lint errors and updated ci to use bundle exec cucumber instead of binstubs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Run Cucumber features
         env:
           RAILS_ENV: test
-        run: bin/cucumber --format progress
+        run: bundle exec cucumber --format progress
 
   jasmine:
     runs-on: ubuntu-latest
