--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   },
   "scripts": {
     "test:js": "jasmine-browser-runner runSpecs",
-    "test:jasmine": "export TMP_PROFILE=$(mktemp -d -p /tmp chrome-profile-XXXXXX); CHROME_BIN=$(which google-chrome-stable); jasmine-browser-runner runSpecs --browser=chrome --capabilities.chromeOptions.args='[\"--headless=new\",\"--no-sandbox\",\"--disable-gpu\",\"--disable-dev-shm-usage\",\"--user-data-dir='$TMP_PROFILE'\",\"--profile-directory=Profile'$(date +%s%N)'\",\"--remote-debugging-port=9222\"]'"  
+    "test:jasmine": "jasmine-browser-runner runSpecs browser=chrome --headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu"  
   }
 }
