--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,6 @@ jobs:
 
   rspec:
     runs-on: ubuntu-latest
-    needs: [lint]         # ✅ Ensure lint passes before running tests
     steps:
       - name: Install packages
         run: |
@@ -79,7 +78,6 @@ jobs:
 
   cucumber:
     runs-on: ubuntu-latest
-    needs: [rspec]        # ✅ Runs *after* RSpec job finishes
     steps:
       - name: Install packages
         run: |
@@ -104,7 +102,7 @@ jobs:
 
   jasmine:
     runs-on: ubuntu-latest
-    needs: [cucumber]     # ✅ Runs *after* Cucumber job finishes
+    if: false 
     steps:
       - name: Install system dependencies
         run: |
